// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should handle re-activation 1`] = `
<Modal
  contentLabel="coding_rules.create_custom_rule"
  onRequestClose={[MockFunction]}
>
  <form
    onSubmit={[Function]}
  >
    <div
      className="modal-head"
    >
      <h2>
        coding_rules.create_custom_rule
      </h2>
    </div>
    <div
      className="modal-body modal-container"
    >
      <Alert
        variant="warning"
      >
        coding_rules.reactivate.help
      </Alert>
      <MandatoryFieldsExplanation
        className="spacer-bottom"
      />
      <div
        className="modal-field"
      >
        <label
          htmlFor="coding-rules-custom-rule-creation-name"
        >
          name
           
          <MandatoryFieldMarker />
        </label>
        <input
          autoFocus={true}
          disabled={false}
          id="coding-rules-custom-rule-creation-name"
          onChange={[Function]}
          required={true}
          type="text"
          value=""
        />
      </div>
      <div
        className="modal-field"
      >
        <label
          htmlFor="coding-rules-custom-rule-creation-key"
        >
          key
           
          <MandatoryFieldMarker />
        </label>
        <input
          disabled={false}
          id="coding-rules-custom-rule-creation-key"
          onChange={[Function]}
          required={true}
          type="text"
          value=""
        />
      </div>
      <div
        className="display-flex-space-between"
      >
        <div
          className="modal-field flex-1 spacer-right"
        >
          <label
            htmlFor="coding-rules-custom-rule-type"
          >
            type
          </label>
          <SelectLegacy
            clearable={false}
            disabled={false}
            id="coding-rules-custom-rule-type"
            onChange={[Function]}
            optionRenderer={[Function]}
            options={
              Array [
                Object {
                  "label": "issue.type.BUG",
                  "value": "BUG",
                },
                Object {
                  "label": "issue.type.VULNERABILITY",
                  "value": "VULNERABILITY",
                },
                Object {
                  "label": "issue.type.CODE_SMELL",
                  "value": "CODE_SMELL",
                },
                Object {
                  "label": "issue.type.SECURITY_HOTSPOT",
                  "value": "SECURITY_HOTSPOT",
                },
              ]
            }
            searchable={false}
            value="CODE_SMELL"
            valueRenderer={[Function]}
          />
        </div>
        <div
          className="modal-field flex-1 spacer-right"
        >
          <label
            htmlFor="coding-rules-custom-rule-severity"
          >
            severity
          </label>
          <SelectLegacy
            clearable={false}
            disabled={false}
            id="coding-rules-custom-rule-severity"
            onChange={[Function]}
            optionRenderer={[Function]}
            options={
              Array [
                Object {
                  "label": "severity.BLOCKER",
                  "value": "BLOCKER",
                },
                Object {
                  "label": "severity.CRITICAL",
                  "value": "CRITICAL",
                },
                Object {
                  "label": "severity.MAJOR",
                  "value": "MAJOR",
                },
                Object {
                  "label": "severity.MINOR",
                  "value": "MINOR",
                },
                Object {
                  "label": "severity.INFO",
                  "value": "INFO",
                },
              ]
            }
            searchable={false}
            value="MAJOR"
            valueRenderer={[Function]}
          />
        </div>
        <div
          className="modal-field flex-1"
        >
          <label
            htmlFor="coding-rules-custom-rule-status"
          >
            coding_rules.filters.status
          </label>
          <SelectLegacy
            clearable={false}
            disabled={false}
            id="coding-rules-custom-rule-status"
            onChange={[Function]}
            options={
              Array [
                Object {
                  "label": "rules.status.READY",
                  "value": "READY",
                },
                Object {
                  "label": "rules.status.BETA",
                  "value": "BETA",
                },
                Object {
                  "label": "rules.status.DEPRECATED",
                  "value": "DEPRECATED",
                },
              ]
            }
            searchable={false}
            value="READY"
          />
        </div>
      </div>
      <div
        className="modal-field"
      >
        <label
          htmlFor="coding-rules-custom-rule-creation-html-description"
        >
          description
          <MandatoryFieldMarker />
        </label>
        <textarea
          disabled={false}
          id="coding-rules-custom-rule-creation-html-description"
          onChange={[Function]}
          required={true}
          rows={5}
          value=""
        />
        <FormattingTips
          className="modal-field-descriptor text-right"
        />
      </div>
      <div
        className="modal-field"
        key="1"
      >
        <label
          className="capitalize"
          htmlFor="1"
        >
          1
        </label>
        <input
          disabled={false}
          id="1"
          name="1"
          onChange={[Function]}
          placeholder="1"
          type="text"
          value=""
        />
        <div
          className="modal-field-description"
          dangerouslySetInnerHTML={
            Object {
              "__html": "description",
            }
          }
        />
      </div>
      <div
        className="modal-field"
        key="2"
      >
        <label
          className="capitalize"
          htmlFor="2"
        >
          2
        </label>
        <textarea
          disabled={false}
          id="2"
          name="2"
          onChange={[Function]}
          placeholder="1"
          rows={3}
          value=""
        />
      </div>
    </div>
    <div
      className="modal-foot"
    >
      <SubmitButton
        disabled={false}
      >
        coding_rules.reactivate
      </SubmitButton>
      <ResetButtonLink
        disabled={false}
        id="coding-rules-custom-rule-creation-cancel"
        onClick={[MockFunction]}
      >
        cancel
      </ResetButtonLink>
    </div>
  </form>
</Modal>
`;

exports[`should render correctly: default 1`] = `
<Modal
  contentLabel="coding_rules.create_custom_rule"
  onRequestClose={[MockFunction]}
>
  <form
    onSubmit={[Function]}
  >
    <div
      className="modal-head"
    >
      <h2>
        coding_rules.create_custom_rule
      </h2>
    </div>
    <div
      className="modal-body modal-container"
    >
      <MandatoryFieldsExplanation
        className="spacer-bottom"
      />
      <div
        className="modal-field"
      >
        <label
          htmlFor="coding-rules-custom-rule-creation-name"
        >
          name
           
          <MandatoryFieldMarker />
        </label>
        <input
          autoFocus={true}
          disabled={false}
          id="coding-rules-custom-rule-creation-name"
          onChange={[Function]}
          required={true}
          type="text"
          value=""
        />
      </div>
      <div
        className="modal-field"
      >
        <label
          htmlFor="coding-rules-custom-rule-creation-key"
        >
          key
           
          <MandatoryFieldMarker />
        </label>
        <input
          disabled={false}
          id="coding-rules-custom-rule-creation-key"
          onChange={[Function]}
          required={true}
          type="text"
          value=""
        />
      </div>
      <div
        className="display-flex-space-between"
      >
        <div
          className="modal-field flex-1 spacer-right"
        >
          <label
            htmlFor="coding-rules-custom-rule-type"
          >
            type
          </label>
          <SelectLegacy
            clearable={false}
            disabled={false}
            id="coding-rules-custom-rule-type"
            onChange={[Function]}
            optionRenderer={[Function]}
            options={
              Array [
                Object {
                  "label": "issue.type.BUG",
                  "value": "BUG",
                },
                Object {
                  "label": "issue.type.VULNERABILITY",
                  "value": "VULNERABILITY",
                },
                Object {
                  "label": "issue.type.CODE_SMELL",
                  "value": "CODE_SMELL",
                },
                Object {
                  "label": "issue.type.SECURITY_HOTSPOT",
                  "value": "SECURITY_HOTSPOT",
                },
              ]
            }
            searchable={false}
            value="CODE_SMELL"
            valueRenderer={[Function]}
          />
        </div>
        <div
          className="modal-field flex-1 spacer-right"
        >
          <label
            htmlFor="coding-rules-custom-rule-severity"
          >
            severity
          </label>
          <SelectLegacy
            clearable={false}
            disabled={false}
            id="coding-rules-custom-rule-severity"
            onChange={[Function]}
            optionRenderer={[Function]}
            options={
              Array [
                Object {
                  "label": "severity.BLOCKER",
                  "value": "BLOCKER",
                },
                Object {
                  "label": "severity.CRITICAL",
                  "value": "CRITICAL",
                },
                Object {
                  "label": "severity.MAJOR",
                  "value": "MAJOR",
                },
                Object {
                  "label": "severity.MINOR",
                  "value": "MINOR",
                },
                Object {
                  "label": "severity.INFO",
                  "value": "INFO",
                },
              ]
            }
            searchable={false}
            value="MAJOR"
            valueRenderer={[Function]}
          />
        </div>
        <div
          className="modal-field flex-1"
        >
          <label
            htmlFor="coding-rules-custom-rule-status"
          >
            coding_rules.filters.status
          </label>
          <SelectLegacy
            clearable={false}
            disabled={false}
            id="coding-rules-custom-rule-status"
            onChange={[Function]}
            options={
              Array [
                Object {
                  "label": "rules.status.READY",
                  "value": "READY",
                },
                Object {
                  "label": "rules.status.BETA",
                  "value": "BETA",
                },
                Object {
                  "label": "rules.status.DEPRECATED",
                  "value": "DEPRECATED",
                },
              ]
            }
            searchable={false}
            value="READY"
          />
        </div>
      </div>
      <div
        className="modal-field"
      >
        <label
          htmlFor="coding-rules-custom-rule-creation-html-description"
        >
          description
          <MandatoryFieldMarker />
        </label>
        <textarea
          disabled={false}
          id="coding-rules-custom-rule-creation-html-description"
          onChange={[Function]}
          required={true}
          rows={5}
          value=""
        />
        <FormattingTips
          className="modal-field-descriptor text-right"
        />
      </div>
      <div
        className="modal-field"
        key="1"
      >
        <label
          className="capitalize"
          htmlFor="1"
        >
          1
        </label>
        <input
          disabled={false}
          id="1"
          name="1"
          onChange={[Function]}
          placeholder="1"
          type="text"
          value=""
        />
        <div
          className="modal-field-description"
          dangerouslySetInnerHTML={
            Object {
              "__html": "description",
            }
          }
        />
      </div>
      <div
        className="modal-field"
        key="2"
      >
        <label
          className="capitalize"
          htmlFor="2"
        >
          2
        </label>
        <textarea
          disabled={false}
          id="2"
          name="2"
          onChange={[Function]}
          placeholder="1"
          rows={3}
          value=""
        />
      </div>
    </div>
    <div
      className="modal-foot"
    >
      <SubmitButton
        disabled={false}
      >
        create
      </SubmitButton>
      <ResetButtonLink
        disabled={false}
        id="coding-rules-custom-rule-creation-cancel"
        onClick={[MockFunction]}
      >
        cancel
      </ResetButtonLink>
    </div>
  </form>
</Modal>
`;
